--- a/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
@@ -18,39 +18,37 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LessonsListCell" rowHeight="155" id="KGk-i7-Jjw" customClass="LessonsListCell" customModule="YoursMine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="155"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LessonsListCell" rowHeight="117" id="KGk-i7-Jjw" customClass="LessonsListCell" customModule="YoursMine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="137"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="155"/>
+                <rect key="frame" x="0.0" y="0.0" width="390" height="137"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FCd-5v-ab0">
-                        <rect key="frame" x="15" y="5" width="360" height="30"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcl-dQ-B5r">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="30"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcl-dQ-B5r">
-                                <rect key="frame" x="0.0" y="0.0" width="360" height="30"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="5회이상 지속된 클래스 입니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6je-X4-Roo">
-                                        <rect key="frame" x="53" y="7" width="158" height="16"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" name="TextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="dhz-pE-pXA"/>
-                                </constraints>
-                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5회이상 지속된 클래스 입니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6je-X4-Roo">
+                                <rect key="frame" x="15" y="7" width="360" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="TextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6je-X4-Roo" firstAttribute="top" secondItem="Mcl-dQ-B5r" secondAttribute="top" constant="7" id="MzI-0h-hjl"/>
+                            <constraint firstAttribute="height" constant="30" id="dhz-pE-pXA"/>
+                            <constraint firstItem="6je-X4-Roo" firstAttribute="leading" secondItem="Mcl-dQ-B5r" secondAttribute="leading" constant="15" id="dxJ-OW-hob"/>
+                            <constraint firstItem="6je-X4-Roo" firstAttribute="centerX" secondItem="Mcl-dQ-B5r" secondAttribute="centerX" id="iKo-Bv-b84"/>
+                            <constraint firstAttribute="trailing" secondItem="6je-X4-Roo" secondAttribute="trailing" constant="15" id="p9A-EE-RTc"/>
+                        </constraints>
+                    </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kw7-Hb-DrT">
-                        <rect key="frame" x="0.0" y="35" width="390" height="120"/>
+                        <rect key="frame" x="0.0" y="37" width="390" height="100"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="롱보드 원데이 레슨" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1j-o8-NOK">
-                                <rect key="frame" x="15" y="20" width="160" height="35"/>
+                                <rect key="frame" x="15" y="0.0" width="160" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="MHP-2K-QIW"/>
                                 </constraints>
@@ -59,7 +57,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Em-z9-usV">
-                                <rect key="frame" x="15" y="60" width="195" height="20"/>
+                                <rect key="frame" x="15" y="40" width="195" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하나은행" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wND-az-DAv">
                                         <rect key="frame" x="0.0" y="0.0" width="46.5" height="20"/>
@@ -85,7 +83,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Eh8-G5-8Wu">
-                                <rect key="frame" x="270" y="80" width="120" height="25"/>
+                                <rect key="frame" x="270" y="60" width="120" height="25"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yh5-CB-rt4">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="25"/>
@@ -151,7 +149,7 @@
                                 </subviews>
                             </stackView>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="KcR-b4-auT">
-                                <rect key="frame" x="215" y="30" width="160" height="8"/>
+                                <rect key="frame" x="215" y="10" width="160" height="8"/>
                                 <color key="backgroundColor" name="LightYellowColor"/>
                                 <color key="tintColor" name="PointYellowColor"/>
                                 <constraints>
@@ -172,8 +170,9 @@
                             <constraint firstAttribute="trailing" secondItem="KcR-b4-auT" secondAttribute="trailing" constant="15" id="0Fb-zt-zkH"/>
                             <constraint firstItem="KcR-b4-auT" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="top" constant="10" id="7mS-iH-FtX"/>
                             <constraint firstItem="3Em-z9-usV" firstAttribute="leading" secondItem="y1j-o8-NOK" secondAttribute="leading" id="PqI-iB-yMV"/>
+                            <constraint firstAttribute="height" constant="100" id="QSZ-DE-VEH"/>
                             <constraint firstItem="y1j-o8-NOK" firstAttribute="leading" secondItem="kw7-Hb-DrT" secondAttribute="leading" constant="15" id="VVw-yR-D1K"/>
-                            <constraint firstItem="y1j-o8-NOK" firstAttribute="top" secondItem="kw7-Hb-DrT" secondAttribute="top" constant="20" symbolic="YES" id="bmA-XU-2jZ"/>
+                            <constraint firstItem="y1j-o8-NOK" firstAttribute="top" secondItem="kw7-Hb-DrT" secondAttribute="top" id="bmA-XU-2jZ"/>
                             <constraint firstAttribute="trailing" secondItem="Eh8-G5-8Wu" secondAttribute="trailing" id="ff2-e9-z0n"/>
                             <constraint firstItem="3Em-z9-usV" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="bottom" constant="5" id="hzz-MP-fHG"/>
                             <constraint firstAttribute="bottom" secondItem="Eh8-G5-8Wu" secondAttribute="bottom" constant="15" id="kjv-rM-lt4"/>
@@ -183,17 +182,16 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="FCd-5v-ab0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Ofx-bu-Tqr"/>
+                    <constraint firstAttribute="trailing" secondItem="Mcl-dQ-B5r" secondAttribute="trailing" id="O2l-CG-He9"/>
                     <constraint firstAttribute="bottom" secondItem="kw7-Hb-DrT" secondAttribute="bottom" id="P4f-Ue-CLc"/>
                     <constraint firstAttribute="trailing" secondItem="kw7-Hb-DrT" secondAttribute="trailing" id="RRi-Yx-Sbk"/>
-                    <constraint firstAttribute="trailing" secondItem="FCd-5v-ab0" secondAttribute="trailing" constant="15" id="V80-mT-88Z"/>
-                    <constraint firstItem="FCd-5v-ab0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="iAE-xT-4oh"/>
-                    <constraint firstItem="kw7-Hb-DrT" firstAttribute="top" secondItem="FCd-5v-ab0" secondAttribute="bottom" id="rtM-yB-VKy"/>
+                    <constraint firstItem="Mcl-dQ-B5r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="gB2-qp-fa1"/>
+                    <constraint firstItem="Mcl-dQ-B5r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="iyg-0O-bOF"/>
                     <constraint firstItem="kw7-Hb-DrT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="sKF-7S-Bdg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="86.956521739130437" y="181.80803571428569"/>
+            <point key="canvasLocation" x="86.956521739130437" y="175.78125"/>
         </tableViewCell>
     </objects>
     <resources>
