--- a/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
@@ -18,11 +18,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LessonsListCell" rowHeight="117" id="KGk-i7-Jjw" customClass="LessonsListCell" customModule="YoursMine" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="390" height="137"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LessonsListCell" rowHeight="109" id="KGk-i7-Jjw" customClass="LessonsListCell" customModule="YoursMine" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="390" height="129"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="390" height="137"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="390" height="129"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mcl-dQ-B5r">
@@ -45,19 +45,16 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kw7-Hb-DrT">
-                        <rect key="frame" x="0.0" y="37" width="390" height="100"/>
+                        <rect key="frame" x="0.0" y="30" width="390" height="100"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="롱보드 원데이 레슨" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y1j-o8-NOK">
-                                <rect key="frame" x="15" y="0.0" width="160" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="MHP-2K-QIW"/>
-                                </constraints>
+                                <rect key="frame" x="15" y="0.0" width="160" height="45"/>
                                 <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="15"/>
                                 <color key="textColor" name="TextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Em-z9-usV">
-                                <rect key="frame" x="15" y="40" width="195" height="20"/>
+                                <rect key="frame" x="15" y="50" width="195" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하나은행" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wND-az-DAv">
                                         <rect key="frame" x="0.0" y="0.0" width="46.5" height="20"/>
@@ -148,18 +145,22 @@
                                     </view>
                                 </subviews>
                             </stackView>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="KcR-b4-auT">
-                                <rect key="frame" x="215" y="10" width="160" height="8"/>
+                            <progressView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="KcR-b4-auT">
+                                <rect key="frame" x="215" y="12" width="160" height="10"/>
                                 <color key="backgroundColor" name="LightYellowColor"/>
                                 <color key="tintColor" name="PointYellowColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="8" id="gTm-Jb-5X4"/>
+                                    <constraint firstAttribute="height" constant="10" id="gTm-Jb-5X4"/>
                                     <constraint firstAttribute="width" constant="160" id="pDm-C7-0uo"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="7"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </progressView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1차 7명 / 10명" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3WI-aT-K7i">
-                                <rect key="frame" x="263" y="20" width="68" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1차 7명 / 10명" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3WI-aT-K7i">
+                                <rect key="frame" x="235" y="10" width="120" height="13"/>
                                 <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="11"/>
                                 <color key="textColor" name="DarkBrown"/>
                                 <nil key="highlightedColor"/>
@@ -168,16 +169,20 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="KcR-b4-auT" secondAttribute="trailing" constant="15" id="0Fb-zt-zkH"/>
-                            <constraint firstItem="KcR-b4-auT" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="top" constant="10" id="7mS-iH-FtX"/>
+                            <constraint firstItem="3WI-aT-K7i" firstAttribute="leading" secondItem="KcR-b4-auT" secondAttribute="leading" constant="20" id="29Y-tw-6br"/>
+                            <constraint firstItem="KcR-b4-auT" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="top" constant="12" id="7mS-iH-FtX"/>
+                            <constraint firstAttribute="trailing" secondItem="3WI-aT-K7i" secondAttribute="trailing" constant="35" id="Njb-Cw-62X"/>
                             <constraint firstItem="3Em-z9-usV" firstAttribute="leading" secondItem="y1j-o8-NOK" secondAttribute="leading" id="PqI-iB-yMV"/>
                             <constraint firstAttribute="height" constant="100" id="QSZ-DE-VEH"/>
                             <constraint firstItem="y1j-o8-NOK" firstAttribute="leading" secondItem="kw7-Hb-DrT" secondAttribute="leading" constant="15" id="VVw-yR-D1K"/>
+                            <constraint firstAttribute="bottom" secondItem="3Em-z9-usV" secondAttribute="bottom" constant="30" id="ay2-Ct-mmK"/>
                             <constraint firstItem="y1j-o8-NOK" firstAttribute="top" secondItem="kw7-Hb-DrT" secondAttribute="top" id="bmA-XU-2jZ"/>
                             <constraint firstAttribute="trailing" secondItem="Eh8-G5-8Wu" secondAttribute="trailing" id="ff2-e9-z0n"/>
                             <constraint firstItem="3Em-z9-usV" firstAttribute="top" secondItem="y1j-o8-NOK" secondAttribute="bottom" constant="5" id="hzz-MP-fHG"/>
                             <constraint firstAttribute="bottom" secondItem="Eh8-G5-8Wu" secondAttribute="bottom" constant="15" id="kjv-rM-lt4"/>
                             <constraint firstAttribute="trailing" secondItem="3Em-z9-usV" secondAttribute="trailing" constant="180" id="s03-aS-VAo"/>
                             <constraint firstItem="KcR-b4-auT" firstAttribute="leading" secondItem="y1j-o8-NOK" secondAttribute="trailing" constant="40" id="tTm-rA-mE3"/>
+                            <constraint firstItem="3WI-aT-K7i" firstAttribute="top" secondItem="kw7-Hb-DrT" secondAttribute="top" constant="10" id="wPx-FM-ave"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -186,12 +191,13 @@
                     <constraint firstAttribute="bottom" secondItem="kw7-Hb-DrT" secondAttribute="bottom" id="P4f-Ue-CLc"/>
                     <constraint firstAttribute="trailing" secondItem="kw7-Hb-DrT" secondAttribute="trailing" id="RRi-Yx-Sbk"/>
                     <constraint firstItem="Mcl-dQ-B5r" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="gB2-qp-fa1"/>
+                    <constraint firstItem="kw7-Hb-DrT" firstAttribute="top" secondItem="Mcl-dQ-B5r" secondAttribute="bottom" id="iaf-IB-3EY"/>
                     <constraint firstItem="Mcl-dQ-B5r" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="iyg-0O-bOF"/>
                     <constraint firstItem="kw7-Hb-DrT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="sKF-7S-Bdg"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="86.956521739130437" y="175.78125"/>
+            <point key="canvasLocation" x="86.956521739130437" y="173.10267857142856"/>
         </tableViewCell>
     </objects>
     <resources>
